Added tags to OpenAPI
